--- a/TracerStepAPP/app/src/main/res/values/strings.xml
+++ b/TracerStepAPP/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">My Application</string>
+
+<!--这里是MainActivity调用~-->
+    <string name="demo_title_layerlist">test</string>
+    <string name="demo_desc_layerlist">tttttest</string>
+    <!--这里是MainActivity调用~-->
+    <string name="demo_title_locationtype">显示定位</string>
+    <string name="demo_desc_locationtype">定位</string>
+
 </resources>
